hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__borrow_array__test__emit_clone@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/extension/collections/borrow_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [39 x i8] c"Some array elements have been borrowed\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define private void @_hl.main.1() {
alloca_block:
  %"7_0" = alloca i64, align 8
  %"5_0" = alloca i64, align 8
  %"8_0" = alloca { ptr, ptr, i64 }, align 8
  %"9_0" = alloca { ptr, ptr, i64 }, align 8
  %"9_1" = alloca { ptr, ptr, i64 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 2, ptr %"7_0", align 4
  store i64 1, ptr %"5_0", align 4
  %"5_01" = load i64, ptr %"5_0", align 4
  %"7_02" = load i64, ptr %"7_0", align 4
  %0 = call ptr @malloc(i64 mul (i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i64 2))
  %1 = call ptr @malloc(i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64))
  call void @llvm.memset.p0.i64(ptr %1, i8 0, i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i1 false)
  %2 = insertvalue { ptr, ptr, i64 } poison, ptr %0, 0
  %3 = insertvalue { ptr, ptr, i64 } %2, ptr %1, 1
  %4 = insertvalue { ptr, ptr, i64 } %3, i64 0, 2
  %5 = getelementptr inbounds i64, ptr %0, i64 0
  store i64 %"5_01", ptr %5, align 4
  %6 = getelementptr inbounds i64, ptr %0, i64 1
  store i64 %"7_02", ptr %6, align 4
  store { ptr, ptr, i64 } %4, ptr %"8_0", align 8
  %"8_03" = load { ptr, ptr, i64 }, ptr %"8_0", align 8
  %array_ptr = extractvalue { ptr, ptr, i64 } %"8_03", 0
  %array_mask_ptr = extractvalue { ptr, ptr, i64 } %"8_03", 1
  %array_offset = extractvalue { ptr, ptr, i64 } %"8_03", 2
  call void @__barray_check_none_borrowed(ptr %array_mask_ptr, i64 %array_offset, i64 2)
  %7 = call ptr @malloc(i64 mul (i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i64 2))
  %8 = call ptr @malloc(i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64))
  call void @llvm.memset.p0.i64(ptr %8, i8 0, i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i1 false)
  %9 = insertvalue { ptr, ptr, i64 } poison, ptr %7, 0
  %10 = insertvalue { ptr, ptr, i64 } %9, ptr %8, 1
  %11 = insertvalue { ptr, ptr, i64 } %10, i64 0, 2
  %12 = getelementptr inbounds i64, ptr %array_ptr, i64 %array_offset
  call void @llvm.memcpy.p0.p0.i64(ptr %7, ptr %12, i64 mul (i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i64 2), i1 false)
  store { ptr, ptr, i64 } %"8_03", ptr %"9_0", align 8
  store { ptr, ptr, i64 } %11, ptr %"9_1", align 8
  %"9_14" = load { ptr, ptr, i64 }, ptr %"9_1", align 8
  %array_ptr5 = extractvalue { ptr, ptr, i64 } %"9_14", 0
  call void @free(ptr %array_ptr5)
  %"9_06" = load { ptr, ptr, i64 }, ptr %"9_0", align 8
  %array_ptr7 = extractvalue { ptr, ptr, i64 } %"9_06", 0
  call void @free(ptr %array_ptr7)
  ret void
}

declare ptr @malloc(i64)

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr nocapture writeonly, i8, i64, i1 immarg) #0

define internal void @__barray_check_none_borrowed(ptr %0, i64 %1, i64 %2) {
  %4 = udiv i64 %1, 64
  %5 = getelementptr inbounds i64, ptr %0, i64 %4
  %6 = load i64, ptr %5, align 4
  %7 = urem i64 %1, 64
  %8 = shl i64 -1, %7
  %9 = and i64 %6, %8
  store i64 %9, ptr %5, align 4
  %10 = add i64 %1, %2
  %last_valid = sub i64 %10, 1
  %11 = udiv i64 %last_valid, 64
  %12 = getelementptr inbounds i64, ptr %0, i64 %11
  %13 = load i64, ptr %12, align 4
  %14 = urem i64 %last_valid, 64
  %15 = add i64 %14, 1
  %16 = sub i64 64, %15
  %17 = lshr i64 -1, %16
  %18 = and i64 %13, %17
  store i64 %18, ptr %12, align 4
  %19 = udiv i64 %1, 64
  %20 = udiv i64 %last_valid, 64
  %21 = sub i64 %20, %19
  %22 = add i64 %21, 1
  %23 = alloca i64, align 8
  store i64 0, ptr %23, align 4
  br label %24

24:                                               ; preds = %mask_block_ok, %3
  %25 = load i64, ptr %23, align 4
  %26 = icmp ult i64 %25, %22
  br i1 %26, label %27, label %33

27:                                               ; preds = %24
  %28 = load i64, ptr %23, align 4
  %29 = add i64 %28, %19
  %30 = getelementptr inbounds i64, ptr %0, i64 %29
  %31 = load i64, ptr %30, align 4
  %32 = icmp eq i64 %31, 0
  br i1 %32, label %mask_block_ok, label %mask_block_err

33:                                               ; preds = %24
  ret void

mask_block_err:                                   ; preds = %27
  %34 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 2, ptr @0)
  call void @abort()
  unreachable

mask_block_ok:                                    ; preds = %27
  %35 = add i64 %28, 1
  store i64 %35, ptr %23, align 4
  br label %24
}

declare i32 @printf(ptr, ...)

declare void @abort()

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias nocapture writeonly, ptr noalias nocapture readonly, i64, i1 immarg) #1

declare void @free(ptr)

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }
attributes #1 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
