hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__borrow_array__test__emit_get@llvm20.snap
---
source: hugr-llvm/src/extension/collections/borrow_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [34 x i8] c"Array element is already borrowed\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define private void @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call ptr @malloc(i64 mul (i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i64 2))
  %1 = call ptr @malloc(i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64))
  call void @llvm.memset.p0.i64(ptr %1, i8 0, i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i1 false)
  %2 = insertvalue { ptr, ptr, i64 } poison, ptr %0, 0
  %3 = insertvalue { ptr, ptr, i64 } %2, ptr %1, 1
  %4 = insertvalue { ptr, ptr, i64 } %3, i64 0, 2
  %5 = getelementptr inbounds i64, ptr %0, i64 0
  store i64 1, ptr %5, align 4
  %6 = getelementptr inbounds i64, ptr %0, i64 1
  store i64 2, ptr %6, align 4
  %array_ptr = extractvalue { ptr, ptr, i64 } %4, 0
  %array_mask_ptr = extractvalue { ptr, ptr, i64 } %4, 1
  %array_offset = extractvalue { ptr, ptr, i64 } %4, 2
  %7 = icmp ult i64 1, 2
  br i1 %7, label %9, label %8

8:                                                ; preds = %entry_block
  br label %14

9:                                                ; preds = %entry_block
  %10 = add i64 1, %array_offset
  call void @__barray_mask_check_not_borrowed(ptr %array_mask_ptr, i64 %10)
  %11 = getelementptr inbounds i64, ptr %array_ptr, i64 %10
  %12 = load i64, ptr %11, align 4
  %13 = insertvalue { i1, i64 } { i1 true, i64 poison }, i64 %12, 1
  br label %14

14:                                               ; preds = %8, %9
  %"0.0" = phi { i1, i64 } [ %13, %9 ], [ { i1 false, i64 poison }, %8 ]
  %array_ptr8 = extractvalue { ptr, ptr, i64 } %4, 0
  call void @free(ptr %array_ptr8)
  ret void
}

declare ptr @malloc(i64)

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr nocapture writeonly, i8, i64, i1 immarg) #0

define internal void @__barray_mask_check_not_borrowed(ptr %0, i64 %1) {
  %3 = udiv i64 %1, 64
  %4 = getelementptr inbounds i64, ptr %0, i64 %3
  %5 = load i64, ptr %4, align 4
  %6 = urem i64 %1, 64
  %7 = lshr i64 %5, %6
  %8 = trunc i64 %7 to i1
  br i1 %8, label %panic, label %ok

panic:                                            ; preds = %2
  %9 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 2, ptr @0)
  call void @abort()
  unreachable

ok:                                               ; preds = %2
  ret void
}

declare i32 @printf(ptr, ...)

declare void @abort()

declare void @free(ptr)

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }
